--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.3",
+    "morgan": "^1.10.0",
+    "react-icons": "^4.7.1",
     "validator": "^13.7.0"
   }
 }
