--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^7.6.0",
+    "cypress": "^12.1.0",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
